--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
+    <title>Sunrise Travel</title>
 </head>
 
 <body>
-    <header>
-        <div class="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
 
+    <header>
         <!-- logo and navbar -->
-        <img src="logo.svg" alt="logo">
+        <img src="./pics/logo.png" alt="logo">
 
         <nav>
             <a href="#">One</a>
@@ -28,85 +24,107 @@
     </header>
 
     <main class="wrapper">
-        <h1>Today's breaking news.</h1>
+
+        <h1>Find deals at hotels, flights and package trips.</h1>
+
         <!-- The big news content -->
         <section class="big-news">
             <article class="big-news-box1">
-                <h2>Progress in the development of Coronaviruse vaccine</h2>
-                <img src="pics/vaccination.jpg" alt="vaccination image">
+                <img class="polaroid" src="pics/airplane.jpg" alt="vaccination image">
             </article>
             <article class="big-news-box2">
+                <h2>Book your next trip with Sunrise Travel.</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                     sanctus est Lorem ipsum dolor sit amet. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. At vero eos et accusam et justo duo dolores et ea rebum.
-                    display: flex;
+                    Nisi quis eleifend quam adipiscing vitae proin. Aliquet risus feugiat in ante metus. Et molestie ac feugiat sed lectus vestibulum. Enim diam vulputate ut pharetra sit amet aliquam.
                 </p>
+
+
+
+                <p>
+                    A pellentesque sit amet porttitor eget dolor morbi non. Iaculis nunc sed augue lacus viverra. Duis convallis convallis tellus id interdum velit. Faucibus purus in massa tempor. Pharetra pharetra massa massa ultricies mi quis. Sit amet mauris commodo quis
+                    imperdiet massa tincidunt. Adipiscing at in tellus integer. Risus commodo viverra maecenas accumsan lacus vel. Dolor purus non enim praesent elementum facilisis. Eu consequat ac felis donec et odio pellentesque diam volutpat. Magna
+                    sit amet purus gravida quis blandit turpis. Tristique senectus et netus et malesuada fames. Arcu cursus euismod quis viverra nibh cras pulvinar. Eget nunc scelerisque viverra mauris in aliquam. Tempus quam pellentesque nec nam aliquam.
+                    Sem integer vitae justo eget magna.
+                </p>
+
+                <p>
+                    Et magnis dis parturient montes. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Massa sed elementum tempus egestas sed sed. Massa id neque aliquam vestibulum morbi blandit cursus risus at. Lacus sed viverra tellus in hac habitasse platea
+                    dictumst vestibulum. Ullamcorper velit sed ullamcorper morbi tincidunt. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Ornare odio ut sem nulla pharetra diam sit. Arcu ac tortor dignissim convallis. Odio facilisis
+                    mauris sit amet massa vitae tortor. Aliquam malesuada bibendum arcu vitae elementum. Nunc non blandit massa enim nec dui nunc. Orci ac auctor augue mauris augue neque gravida. Odio facilisis mauris sit amet massa vitae tortor condimentum
+                    lacinia. Morbi quis commodo odio aenean sed adipiscing diam donec adipiscing.
+
+
+                </p>
+
             </article>
+
+
         </section>
 
         <!-- The other news  -->
         <section class="other-news">
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>Greece</h2>
+                <img src="pics/greece.jfif" alt="Greece">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
             </article>
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>Spain</h2>
+                <img src="pics/spain.jfif" alt="Spain">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
-            </article>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
             </article>
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>Italy</h2>
+                <img src="pics/italy.jpg" alt="wheather image">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
-            </article>
-            </article>
-            <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
             </article>
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>Carribean</h2>
+                <img src="./pics/carribean.jpg" alt="Carribean">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
             </article>
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>South America</h2>
+                <img src="./pics/southamerica.jfif" alt="South America">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
             </article>
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>Africa</h2>
+                <img src="pics/africa.jfif" alt="Africa">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
             </article>
             <article class="news-box">
-                <h2>Wheather forecast for the next ten days.</h2>
-                <img src="pics/wheather.jpg" alt="wheather image">
+                <h2>Asia</h2>
+                <img src="pics/asia.jfif" alt="Asia">
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                </p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet.
+            </article>
+            <article class="news-box">
+                <h2>Cities</h2>
+                <img src="pics/newyork.jpg" alt="New York">
+                <p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
             </article>
         </section>
 
     </main>
+
     <footer>
 
     </footer>
