Last version, fixed responsive

--- a/code/index.html
+++ b/code/index.html
@@ -21,32 +21,54 @@
     </header>
 
     <section class="big-news">  <!-- The big news content -->
-      <img src="./images/food_1_1.jpg" alt="breakfast_bowl" style="width:100%">
-       <h3>Yummy food recepies and inspiration</h3>
+      <img src="./images/food_1.jpg" alt="breakfast_bowl" style="width:100%">
+      <div class="big-news-text"> 
+      <h3>Yummy food recepies and inspiration</h3>
        <p>On this site you will find recipes and a lot of inspiration for breakfast, lunch, dinner, snacks and so on.</p>
        <a href="#">Read more</a>
+       </div>
     </section>
 
     <section class="other-news"> <!-- The other news  -->
       
-      <div class="news">
-        <img src="./images/food_2_2.jpg" alt="food2" style="width:100%">
+      <div class="news1">
+        <img src="./images/food_2.jpg" alt="food2" style="width:100%">
         <a href="#"><h3>Breakfast</h3></a>
       </div>
 
-      <div class="news">
-        <img src="./images/food_3_3.jpg" alt="food3" style="width:100%">
+      <div class="news2">
+        <img src="./images/food_3.jpg" alt="food3" style="width:100%">
         <a href="#"><h3>Lunch</h3></a>
        </div>
 
-      <div class="news">
-        <img src="./images/food_4_4.jpg" alt="food4" style="width:100%">
+      <div class="news3">
+        <img src="./images/food_4.jpg" alt="food4" style="width:100%">
         <a href="#"><h3>Dinner</h3></a>
       </div>
 
-      <div class="news">
-        <img src="./images/food_5_5.jpg" alt="food5" style="width:100%">
-        <a href="#"><h4>Snacks</h4></a>
+      <div class="news4">
+        <img src="./images/food_5.jpg" alt="food5" style="width:100%">
+        <a href="#"><h4>Drinks</h4></a>
+      </div>
+
+      <div class="news5">
+        <img src="./images/food_6.jpg" alt="food5" style="width:100%">
+        <a href="#"><h4>Juices</h4></a>
+      </div>
+
+      <div class="news6">
+        <img src="./images/food_7.jpg" alt="food5" style="width:100%">
+        <a href="#"><h4>Smootihes</h4></a>
+      </div>
+
+      <div class="news7">
+        <img src="./images/food_8.jpg" alt="food5" style="width:100%">
+        <a href="#"><h4>Desserts</h4></a>
+      </div>
+
+      <div class="news8">
+        <img src="./images/food_9.jpg" alt="food5" style="width:100%">
+        <a href="#"><h4>Sallads</h4></a>
       </div>
     
     </section>
