Final version, added Readme

--- a/code/index.html
+++ b/code/index.html
@@ -58,17 +58,17 @@
 
       <div class="news6">
         <img src="./images/food_7.jpg" alt="food5" style="width:100%">
-        <a href="#"><h4>Smootihes</h4></a>
+        <a href="#"><h4>Smoothies</h4></a>
       </div>
 
       <div class="news7">
         <img src="./images/food_8.jpg" alt="food5" style="width:100%">
-        <a href="#"><h4>Desserts</h4></a>
+        <a href="#"><h4>Dessert</h4></a>
       </div>
 
       <div class="news8">
         <img src="./images/food_9.jpg" alt="food5" style="width:100%">
-        <a href="#"><h4>Sallads</h4></a>
+        <a href="#"><h4>Salad</h4></a>
       </div>
     
     </section>
