Footer, Content, Hoover Changed padding and space in footer, as well as name of the links Example of actual content i bigArticle and headlines in small news Changed hoover color on nav links

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
         <img class="logo" src="./images/climate-news-logo.svg"> 
         <nav>
             <a href="#">Science</a>
-            <a href="#">Activism</a>
+            <a href="#">Behavior</a>
             <a href="#"> <img class="logo-tablet" src="./images/climate-news-logo.svg"> </a>
             <a href="#">Politics</a>
             <a href="#">Energy</a>
@@ -31,9 +31,11 @@
       <article class="bigArticle">
        <img src="./images/photo-wind_park.jfif">
        <div class="articleText">
-       <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </h1>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptas quod beatae accusantium. Quam officiis et provident laborum temporibus dignissimos harum vero aperiam praesentium, consectetur facilis dolor ea laboriosam expedita.</p>
-       <p class="dates">Written by xxxx xxxx 2020-08-20</p> 
+       <h1>UK wind record broken - New Amazon project in Ireland</h1>
+       <p>The UK's grid operator National Grid has confirmed that Storm Ellen's gales brought the highest ever share of wind power on the electricity system.
+
+        It said that at 1am on 22 August, wind fed 13.5GW into the grid, accounting for 59.1% of Britain's power demand.</p>
+       <p class="dates">By <a href="https://www.windpowermonthly.com/article/1692763/uk-wind-record-broken-new-amazon-project-ireland">Windpowermonthly</a> - 26 August 2020</p> 
       </div>
       
     </article>
@@ -42,19 +44,19 @@
     <section class="small-news">
 
       <article class="smallArticle">
-        <h3>Politics</h3>
+        <h3>Science</h3>
         <img src="images/noaa-24zTdnS3zc4-unsplash.jpg">
         <div class="articleText">
-          <h2>Smaller article</h2>
+          <h2>Expedition</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
         </div>
       </article>
       <article class="smallArticle">
-        <h3>Politics</h3>
+        <h3>Behavior</h3>
         <img src="./images/prudence-earl-8F0I12ypHPA-unsplash.jpg">
         <div class="articleText">
-          <h2>Smaller article</h2>
+          <h2>Circular economy</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
         </div>
@@ -63,16 +65,16 @@
         <h3>Politics</h3>
         <img src="./images/john-cameron-FMrZLPdDyx4-unsplash.jpg">
         <div class="articleText">
-          <h2>Smaller article</h2>
+          <h2>New tax on plastic</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
         </div>
       </article>
       <article class="smallArticle">
-        <h3>Politics</h3>
+        <h3>Behavior</h3>
         <img src="./images/scott-warman-NpNvI4ilT4A-unsplash.jpg">
         <div class="articleText">
-          <h2>Smaller article</h2>
+          <h2>Green food</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
         </div>
@@ -83,7 +85,7 @@
     <section class="small-news-second">
    
       <article class="smallArticle">
-        <h3>Politics</h3>
+        <h3>Science</h3>
         <img src="./images/noaa-5hZJVGPG6vo-unsplash.jpg">
         <div class="articleText">
           <h2>Smaller article</h2>
@@ -110,7 +112,7 @@
         </div>
       </article>
       <article class="smallArticle">
-        <h3>Politics</h3>
+        <h3>Energy</h3>
         <img src="./images/jason-dent-5VnI90YqrTE-unsplash.jpg">
         <div class="articleText">
           <h2>Smaller article</h2>
@@ -125,12 +127,12 @@
         <div class="links-prio-1">
           <a href="#">Contact</a>
           <a href="#">About</a>
-          <a href="#">About</a>
+          <a href="#">Help</a>
         </div>
         <div class="links-prio-2">
           <a href="#">Send tip</a>
           <a href="#">Press</a>
-          <a href="#">Press</a>
+          <a href="#">Subscribe</a>
         </div>
         <div class="links-prio-1">
           <p></p>
