tog bort ett ö i ett av bildfilernas namn. ändrade tider på artiklar

--- a/code/index.html
+++ b/code/index.html
@@ -60,7 +60,7 @@
     <section class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/malmöfestivalen.jpg" meta=malmöfestivalen>
+          <img class="img-news-grid" src="./bilder/malmofestivalen.jpg" meta=malmöfestivalen>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>Malmöfestivalen siktar mot 2021</h2>
           <p>"Vi kommer bli större och bättre än nånsin"</p>
@@ -70,7 +70,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/pernillamc.jpg" meta=regn>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 10.55</h4>
           <h2>Pernilla Månsson Colt lämnar trädgårdstider</h2>
           <p>Kollegan Malin Persson: "Det känns supertrist"</p>
         </a>
@@ -79,7 +79,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/vaccin-unsplash.jpg" meta=vaccination>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 11.30</h4>
           <h2>Nu förbereds vaccination mot Corona</h2>
           <p>Så många doser får SUS</p>
         </a>
@@ -88,7 +88,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/marta" meta=Marta>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 12.00</h4>
           <h2>Marta återvänder till FC Rosengård</h2>
           <p>Stjärnan skriver på femårskontrakt</p>
         </a>
@@ -97,7 +97,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/svan-unsplash.jpg" meta=svan>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 16.10</h4>
           <h2>Här går svanen till attack</h2>
           <p>Kanalsvanen är tillbaka</p>
         </a>
@@ -106,7 +106,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/inbrott-pixabay.jpg" meta=inbrott>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 17.36</h4>
           <h2>Färre inbrott under corona</h2>
           <p>Positiva besked från polischefen</p>
         </a>
@@ -115,7 +115,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/kungensilvia.jpg" meta=kungen och silvia>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 18.03</h4>
           <h2>Kungen och Silvia på besök i Skåne</h2>
           <p>Besöker scoutläger för andra året i rad</p>
         </a>
@@ -124,7 +124,7 @@
       <div class="card">
         <a href="#">
           <img class="img-news-grid" src="./bilder/amandajensen.jpg" meta=amanda-jensen>
-          <h4>28:e augusti 2020, 10.31</h4>
+          <h4>28:e augusti 2020, 18.45</h4>
           <h2>De tävlar i årets Melodifestival</h2>
           <p>Amanda Jensen gör oväntad comeback</p>
         </a>
