fixed height added to cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Art Matters!</h1>
       <nav>
         <a href="#"><strong>home</strong></a>
-        <a href="#"><strong>what's on</strong></a>
+        <a href="#"><strong>events</strong></a>
         <a href="#"><strong>interviews</strong></a>
         <a href="#"><strong>contact us</strong></a>
       </nav>
@@ -86,8 +86,8 @@
 
         <div class="flex-child">
           <a href="#">
-            <img class="other-news-img" src="./abstract2-img.jpg" alt="Abstract dark painting" />
-            <h4>How to predict the next hot artists</h4>
+            <img class="other-news-img" src="./urban-img.jpg" alt="Abstract dark painting" />
+            <h4>Berlin's urban art scene is evolving</h4>
           </a>
         </div>
 
@@ -97,7 +97,6 @@
             <h4>Photographer Jean-Michel Blanc explains his latest work</h4>
           </a>
         </div>
-      
       </section>
     
     <footer>
