--- a/code/index.html
+++ b/code/index.html
@@ -18,15 +18,21 @@
       <div></div>
       <div></div>
     </div>
-       <div class="sitename">
-        <img src="./images/paw-solid.svg" alt="logo">
-        <div>SANDRINE'S<br>DOG RESCUE</div>
-      </div>
-    <nav>
+    <div class="sitename">
+      <img src="./images/paw-solid.svg" alt="logo">
+      <div>SANDRINE'S<br>DOG RESCUE</div>
+    </div>
+    <!-- <nav>
       <a href="#">ADOPTION</a>
       <a href="#">DONATION</a>
       <a href="#">SOCIAL MEDIA</a>
       <a href="#">ABOUT US</a>
+    </nav> -->
+    <nav>
+      <a class="link1" href="#">ADOPTION</a>
+      <a class="link2" href="#">DONATION</a>
+      <a class="link3" href="#">SOCIAL MEDIA</a>
+      <a class="link4" href="#">ABOUT US</a>
     </nav>
   </header>
 
