--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="./site.webmanifest">
   </head>
   <body>
 
@@ -87,7 +87,7 @@
         <div class="flex-child">
           <a href="#">
             <img class="other-news-img" src="./urban-img.jpg" alt="Abstract dark painting" />
-            <h4>Berlin's urban art scene is evolving</h4>
+            <h4>How Berlin's urban art scene is evolving</h4>
           </a>
         </div>
 
@@ -102,11 +102,10 @@
     <footer>
       <form>
         <label for="email">Sign up to our newsletter:</label>
-        <input type="text" name="email" placeholder="Your email address">
+        <input type="text" id="email" placeholder="Your email address">
         <input type="submit" value="submit" class="submit-btn">
       </form>
-      <p>Site by &copyJamie Cook | Favicon: <a href="https://thenounproject.com/search/?q=art%20fav%20icon&i=92327">painting</a> by Arthur Shlain from <a href="https://thenounproject.com/">Noun Project</p>
-      <p></a></p>
+      <p>Site by &#169;Jamie Cook | Favicon: <a href="https://thenounproject.com/search/?q=art%20fav%20icon&i=92327">painting</a> by Arthur Shlain from <a href="https://thenounproject.com/">Noun Project</a></p>
     </footer>
   </body>
 </html>
