updated tablet version

--- a/code/index.html
+++ b/code/index.html
@@ -9,31 +9,39 @@
   </head>
   <body>
     <header>
-      <h1>Wedding Weekly &#127882</h1>
       <div class="hamburger">
         <div></div>
         <div></div>
         <div></div>
       </div>
       <nav>
-        <a href="home">Home</a>
-        <a href="news">News</a>
-        <a href="about-us">About Us</a>
-        <a href="contact">Contact</a>
+      <div class="left">
+        <a href class="left-links">Home</a>
+        <a href class="left-links">News</a>
+      </div>
+
+      <h1>Wedding Weekly &#127882</h1>
+      
+      <div class="right">
+        <a href class="right-links">About Us</a>
+        <a href class="right-links">Contact</a>
+      </div>
       </nav>
+
+        
     </header>
   
       <div class="main">
         <img id="mainphoto" src="./Images/coronawedding.jpg">
-        <h2>How to plan a wedding during a world pandemic?</h2>
+        <div class="h2">
+          <h2>How to plan a wedding during a world pandemic.</h2>
         <p>There’s a lot to think about when planning your big day—no matter where your wedding date falls on the calendar. But if it happens to be in the midst of the coronavirus crisis, you might be wondering what you should do—if anything—to prepare and plan for the potential that your wedding may be affected.
         <br>
         <br>
         <a href="https://www.brides.com/what-to-know-about-coronavirus-and-wedding-planning-4799160">Read more...</a></p> 
-        <hr>
+        </div>
       </div>
-        <hr>
-
+<hr>
   <section class="cards">
     <div class="card">
       <img src="./Images/venue.jpg">
@@ -76,12 +84,7 @@
         <h3>Open bar or not?</h3>
         <a href="#">Read more...</a>
     </div>
-
-    <div class="card">
-      <img src="./images/celeb.jpg">
-        <h3>Celebrity weddings 2020</h3>
-        <a href="#">Read more...</a>
-    </div>
+   </div>
   </section>
 
     <footer>
