Fixed margin and padding, added hovering effects on cards

--- a/code/index.html
+++ b/code/index.html
@@ -29,18 +29,25 @@
     <main>
       <!-- The big news flexbox -->
       <section class="big-news">
+        <img src="./Images/bsb_group.jpg" alt="Backstreet Boys Image">
         <div>
           <h2>Backstreet's back, alright!</h2>
           <h4>Student poll shows Brian is the most popular Backstreet Boy</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+            culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <img src="./Images/bsb_group.jpg" alt="Backstreet Boys Image">
       </section>
 
       <!-- Small news grid  -->
-      <section class="grid-wrapper">
+      <section class="wrapper">
         <div>
-          <h3>A blast from the past</h3>
-          <p>What is your favourite Backstreet Boys' logo?</p>
+          <h3>Backstreet Boy Men</h3>
+          <p>Who is YOUR favourite?</p>
         </div>
         <section class="grid-articles">
           <div class="item">
@@ -103,7 +110,7 @@
       </section>
       
       <!-- Small news flexbox  -->
-      <section class="small-news">
+      <section class="wrapper">
         <div>
           <h3>A blast from the past</h3>
           <p>What is your favourite Backstreet Boys' logo?</p>
@@ -112,25 +119,21 @@
           <a href="#">
             <article>
               <img src="./Images/bsblogo2.png" alt="Backstreet Boys Logo">
-              <h4>This is one logo</h4>
             </article>
           </a>
           <a href="#">
             <article>
               <img src="./Images/bsblogo3.png" alt="Backstreet Boys Logo">
-              <h4>This is one logo</h4>
             </article>
           </a>
           <a href="#">
             <article>
               <img src="./Images/bsblogo4.png" alt="Backstreet Boys Logo">
-              <h4>This is one logo</h4>
             </article>
           </a> 
           <a href="#"> 
             <article>
               <img src="./Images/bsblogo5.png" alt="Backstreet Boys Logo">
-              <h4>This is one logo</h4>
             </article>
           </a>
         </section>
