Animation and ReadMe

--- a/code/index.html
+++ b/code/index.html
@@ -46,6 +46,7 @@
 
   <section class="news">
     <!-- The other news  -->
+    <div class="heart"></div>
     <h1>Dogs looking for home</h1>
     
     <section class="cards">
@@ -111,7 +112,7 @@
   </section>
 
   <footer>
-    <div class="footer-left">&#169 2020 Sandrine Elander</div>
+    <div class="footer-left">&#169; 2020 Sandrine Elander</div>
     <div>
       <img src="./logo.svg" alt="Technigo">
     </div>
